--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -21,7 +21,7 @@
 
     <!-- dom-if instead of iron-pages to restamp -->
     <template is="dom-if" if="{{_equal(_selected, 3)}}" restamp>
-      <audit-display></audit-display>
+      <audit-display page-size="20"></audit-display>
     </template>
   </template>
 </dom-module>
