--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -14,6 +14,9 @@
     common file.
   -->
 
+  <!-- Fonts -->
+  <link href='//fonts.googleapis.com/css?family=Roboto:400,700|Roboto+Mono:400,700|Roboto+Slab:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
   <script src="{% static 'vimma/components/bower_components/webcomponentsjs/webcomponents-lite.min.js' %}"></script>
   <link rel="import" href="{% static 'vimma/components/vimma-app/vimma-app.html' %}">
 
