--- a/vimmasite/vimma/static/vimma/components/plain-text/plain-text.html
+++ b/vimmasite/vimma/static/vimma/components/plain-text/plain-text.html
@@ -22,7 +22,7 @@
 
   <style>
     :host {
-      font-family: monospace;
+      font-family: "Roboto Mono", monospace;
       white-space: pre-wrap;
       display: inline-block;
       padding: 1ex;
