--- a/vimmasite/vimma/static/vimma/components/test/index.html
+++ b/vimmasite/vimma/static/vimma/components/test/index.html
@@ -13,6 +13,7 @@
         'frag-history',
         'frag-split',
         'frag-util',
+        'local-date',
         'plain-text',
         'show-count'
       ];
