show the user in audits

--- a/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
+++ b/vimmasite/vimma/static/vimma/components/audit-display/audit-display.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../equal-behavior/equal-behavior.html">
 <link rel="import" href="../local-date/local-date.html">
 <link rel="import" href="../plain-text/plain-text.html">
+<link rel="import" href="../user-name/user-name.html">
 
 <dom-module id="audit-display">
   <link rel="import" type="css" href="../../css/component-common.css">
@@ -75,7 +76,7 @@
               <td>Timestamp</td>
               <td>Level</td>
               <td>vm</td>
-              <!-- TODO: show the user -->
+              <td>User</td>
               <td>Audit</td>
             </tr>
           </thead>
@@ -87,6 +88,15 @@
                 </td>
                 <td>[[_getAuditLvlName(item.level)]]</td>
                 <td>[[item.vm]]</td>
+                <td>
+                  <template is="dom-if" if="[[_null(item.user)]]" restamp>
+                    –
+                  </template>
+                  <template is="dom-if" if="[[!_null(item.user)]]" restamp>
+                    <user-name userid="[[item.user]]" show="username">
+                    </user-name>
+                  </template>
+                </td>
                 <td>
                   <plain-text text="[[item.text]]" size="50"></plain-text>
                 </td>
