--- a/vimmasite/vimma/static/vimma/css/component-common.css
+++ b/vimmasite/vimma/static/vimma/css/component-common.css
@@ -2,6 +2,8 @@
 
 plain-text.error {
 	background-color: Pink;
+	color: Black;
+	font-weight: normal;
 }
 plain-text.error.toggles:hover {
 	background-color: HotPink;
