--- a/vimmasite/vimma/static/vimma/components/equal-behavior/equal-behavior.html
+++ b/vimmasite/vimma/static/vimma/components/equal-behavior/equal-behavior.html
@@ -4,6 +4,12 @@
 VimmaBehaviors.Equal = {
   _equal: function(x, y) {
     return x === y;
+  },
+
+  // Looks like we can't pass the literal ‘null’ to a computed binding.
+  // https://www.polymer-project.org/1.0/docs/devguide/data-binding.html#literals
+  _null: function(x) {
+    return this._equal(x, null);
   }
 };
 </script>
