--- a/vimmasite/vimma/static/vimma/components/vimma-app/vimma-app.css
+++ b/vimmasite/vimma/static/vimma/components/vimma-app/vimma-app.css
@@ -1,3 +1,14 @@
+:host {
+	/* or we can't set the ‘width’ */
+	display: block;
+	max-width: 1024px;
+	min-width: 800px;
+
+	/* center the content */
+	margin-left: auto;
+	margin-right: auto;
+}
+
 index-elem {
 	/* Uncomment to check that this style inherits (bleeds?) through all
 	 * descendants. Check with both Shadow and Shady DOM & all browsers.
