--- a/vimmasite/vimma/static/vimma/css/component-common.css
+++ b/vimmasite/vimma/static/vimma/css/component-common.css
@@ -13,3 +13,7 @@ plain-text.error.toggles:hover {
 input, textarea, keygen, select, button {
 	font-family: Roboto;
 }
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: "Roboto Slab";
+}
