schedule-list: structure

--- a/vimmasite/vimma/static/vimma/components/create-schedule/create-schedule.html
+++ b/vimmasite/vimma/static/vimma/components/create-schedule/create-schedule.html
@@ -13,6 +13,9 @@
 <!--
   Component to create a new schedule.
 
+  After creating a schedule it fires the event ‘schedule-created’. Event.detail
+  is the ‘id’ of the newly created schedule.
+
   TODO: handle the case when there are no timezones in the database.
 -->
 
