--- a/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.css
+++ b/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.css
@@ -1,6 +1,53 @@
 :host {
+	position: relative;
+
 	display: block;
 	border: 0.2em solid;
 	border-color: var(--paper-teal-200);
+}
+
+div#overlay {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+
+	background: rgba(0, 0, 0, 0.2);
+	text-align: center;
+}
+
+div#summary {
+	display: flex;
+	align-items: center;
 	padding: 1ex;
+}
+
+div#summary:hover {
+	background-color: var(--paper-light-blue-50);
+	cursor: pointer;
+}
+
+span#summary-name {
+	width: 65%;
+}
+
+span#summary-timezone {
+	flex-grow: 1;
+}
+
+paper-icon-button#delete {
+	color: var(--paper-teal-700);
+}
+
+paper-icon-button#delete:hover {
+	color: var(--paper-red-a400);
+	background: var(--paper-red-100);
+	border-radius: 50%;
+}
+
+div#details {
+	padding: 1ex;
+	border-top: 0.1em solid;
+	border-color: var(--paper-teal-200);
 }
