--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -24,17 +24,19 @@
 
     <!-- dom-if instead of iron-pages to restamp -->
 
-    <template is="dom-if" if="{{_equal(_selected, 1)}}" restamp>
-      Later: select a project and see only the VMs in that project.
-    </template>
+    <div id="content">
+      <template is="dom-if" if="{{_equal(_selected, 1)}}" restamp>
+        Later: select a project and see only the VMs in that project.
+      </template>
 
-    <template is="dom-if" if="{{_equal(_selected, 2)}}" restamp>
-      <schedules-tab></schedules-tab>
-    </template>
+      <template is="dom-if" if="{{_equal(_selected, 2)}}" restamp>
+        <schedules-tab></schedules-tab>
+      </template>
 
-    <template is="dom-if" if="{{_equal(_selected, 3)}}" restamp>
-      <audit-display page-size="20"></audit-display>
-    </template>
+      <template is="dom-if" if="{{_equal(_selected, 3)}}" restamp>
+        <audit-display page-size="20"></audit-display>
+      </template>
+    </div>
   </template>
 </dom-module>
 
