--- a/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
+++ b/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
@@ -2,10 +2,16 @@
 
 <link rel="import" href="../ajax-load/ajax-load.html">
 <link rel="import" href="../api-loader/api-loader.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../equal-behavior/equal-behavior.html">
 <link rel="import" href="../plain-text/plain-text.html">
+<link rel="import" href="matrix-editor.html">
 
 <dom-module id="schedule-detail">
   <link rel="import" type="css" href="../../css/component-common.css">
@@ -50,7 +56,42 @@
         </div>
         <template is="dom-if" if="[[_expanded]]">
           <div id="details">
-            Hello world!
+            <paper-input
+              label="Name"
+              value="{{_newName}}"
+              required
+              auto-validate
+              error-message="The name may not be empty"
+              ></paper-input>
+
+            <label for="tz-select">TimeZone:</label>
+            <select id="tz-select" on-change="_newTzSelected">
+              <template is="dom-repeat" items="[[_timezones]]">
+                <option value="[[item.id]]"
+                        selected$="[[_equal(item.id, _newTzId)]]"
+                        >[[item.name]]</option>
+              </template>
+            </select>
+
+            <matrix-editor
+              matrix="{{_newMatrix}}"></matrix-editor>
+
+            <paper-toggle-button id="is-special" checked="{{_newIsSpecial}}"
+              ></paper-toggle-button>
+            <label for="is-special">
+              Using this schedule requires special permissions
+            </label>
+            <br>
+
+            <paper-button id="save" raised on-click="_save">
+              <iron-icon icon="save"></iron-icon>
+              Save
+            </paper-button>
+
+            <paper-button id="discard" raised on-click="_discardChanges">
+              <iron-icon icon="undo"></iron-icon>
+              Undo changes
+            </paper-button>
           </div>
         </template>
 
