--- a/vimmasite/vimma/static/vimma/components/schedules-tab/schedules-tab.html
+++ b/vimmasite/vimma/static/vimma/components/schedules-tab/schedules-tab.html
@@ -8,7 +8,7 @@
 
   <template>
     <create-schedule on-schedule-created='_scheduleCreated'></create-schedule>
-    <schedule-list id="list"></schedule-list>
+    <schedule-list id="list" frag="{{frag}}"></schedule-list>
   </template>
 </dom-module>
 
