--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -14,7 +14,11 @@
 
   <template>
     <frag-history frag="{{_frag}}"></frag-history>
-    <frag-split frag="{{_frag}}" head="{{_fragHead}}"></frag-split>
+    <frag-split
+      frag="{{_frag}}"
+      head="{{_fragHead}}"
+      tail="{{_fragTail}}"
+      ></frag-split>
 
     <paper-tabs selected="{{_selected}}">
       <template is="dom-repeat" items="{{_tabs}}">
@@ -30,7 +34,7 @@
       </template>
 
       <template is="dom-if" if="{{_equal(_selected, 2)}}" restamp>
-        <schedules-tab></schedules-tab>
+        <schedules-tab frag="{{_fragTail}}"></schedules-tab>
       </template>
 
       <template is="dom-if" if="{{_equal(_selected, 3)}}" restamp>
