<vm-list> and basic <vm-detail>

--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
@@ -11,6 +11,12 @@
 <link rel="import" href="create-vm-aws-data.html">
 <link rel="import" href="create-vm-dummy-data.html">
 
+<!--
+  Create a new VM.
+
+  After creating the VM it fires the event ‘vm-created’.
+-->
+
 <dom-module id="create-vm">
   <link rel="import" type="css" href="../../css/component-common.css">
   <link rel="import" type="css" href="create-vm.css">
