--- a/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
+++ b/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
@@ -50,7 +50,7 @@
           <paper-icon-button
             id="delete"
             icon="delete"
-            title="Delete"
+            title="Delete…"
             on-click="_delete"
             ></paper-icon-button>
         </div>
