--- a/vimmasite/vimma/static/vimma/components/vm-list/vm-list.css
+++ b/vimmasite/vimma/static/vimma/components/vm-list/vm-list.css
@@ -26,6 +26,10 @@ div#table-head {
 	padding: 1ex;
 	border: 0.2em solid transparent;
 }
+div#table-head > span.vborder {
+	align-self: stretch;
+	border-left: 0.15em dashed var(--paper-light-blue-500);
+}
 
 span#name {
 	flex: 1 1;
@@ -40,19 +44,12 @@ span#expiry-date {
 	flex: 0 0 17%;
 }
 
-span#name, span#project, span#expiry-date {
+span#name, span#state, span#project, span#expiry-date {
 	/* center the label and the sort-icon vertically */
 	display: flex;
 	align-items: center;
 
 	padding: 1ex;
-	cursor: pointer;
-}
-span#state {
-	/* center the label and the sort-icon vertically */
-	display: flex;
-	align-items: center;
-
 	cursor: pointer;
 }
 span#name:hover, span#state:hover, span#project:hover, span#expiry-date:hover {
