--- a/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
+++ b/vimmasite/vimma/static/vimma/components/schedule-detail/schedule-detail.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../equal-behavior/equal-behavior.html">
+<link rel="import" href="../loading-overlay/loading-overlay.html">
 <link rel="import" href="../plain-text/plain-text.html">
 <link rel="import" href="matrix-editor.html">
 
@@ -96,9 +97,7 @@
         </template>
 
         <template is="dom-if" if="[[_actionInFlight]]" restamp>
-          <div id="overlay">
-            <paper-spinner active></paper-spinner>
-          </div>
+          <loading-overlay></loading-overlay>
         </template>
       </template>
     </template>
