--- a/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/vm-detail.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="../loading-overlay/loading-overlay.html">
 <link rel="import" href="../plain-text/plain-text.html">
 <link rel="import" href="../vm-data-model/vm-data-model.html">
 
@@ -92,9 +93,7 @@
         </template>
 
         <template is="dom-if" if="[[_actionInFlight]]" restamp>
-          <div id="overlay">
-            <paper-spinner active></paper-spinner>
-          </div>
+          <loading-overlay></loading-overlay>
         </template>
       </template>
     </template>
