--- a/vimmasite/vimma/static/vimma/components/vm-list/vm-list.html
+++ b/vimmasite/vimma/static/vimma/components/vm-list/vm-list.html
@@ -28,6 +28,12 @@
             <h1 on-click="_toggle" title="Expand/Collapse">
               <iron-icon icon="[[_headingIcon]]"></iron-icon>
               <show-count n="[[_sortedVms.length]]" one="VM"></show-count>
+              <template is="dom-if" if="[[destroyed]]">
+                (destroyed)
+              </template>
+              <template is="dom-if" if="[[!destroyed]]">
+                (not destroyed)
+              </template>
               <h1>
           </div>
         </template>
